<resources>
    <string name="app_name">Recyclerview</string>
    <string name="eName">enter name</string>
    <string name="eDate">enter birth date</string>
    <string name="eDesc">enter description</string>
    <string name="add">ADD</string>
    <string name="photo">photo</string>
    <string name="name">Agata</string>
    <string name="myFileprovider">com.example.recyclerview.fileprovider</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="infoName">contact name</string>
    <string name="infoDate">contact date</string>
    <string name="infoDesc">contact Desc</string>
    <string name="OK">OK</string>
    <string name="Delete">DELETE</string>
    <string name="delete_question">You want to delete a person. Are you sure?</string>
    <string name="dialog_confirm">YES</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="delete_dialog_tag">dialog tag</string>
</resources>
