<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    android:onClick="on_row_click">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/design_default_color_primary"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imPic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/avataaars"
                android:contentDescription="@string/photo" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/name"
                android:layout_weight="3"
                android:textSize="18sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@color/design_default_color_primary"
                android:contentDescription="@string/Delete"
                android:onClick="delete_row"
                android:visibility="visible"
                card_view:srcCompat="@android:drawable/ic_menu_delete"
                tools:style="@android:style/Widget.Material.Light.ImageButton" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>